# cute_framework_project_template

./: CMakeLists.txt  README.md
src/: main.cpp
